*SVN*

* Added assumption that all plugin creators desire to be sharing individuals and release their work under the MIT license [DHH]

* Added source-annotations extractor tasks to rake [Jamis Buck]. This allows you to add FIXME, OPTIMIZE, and TODO comments to your source code that can then be extracted in concert with rake notes (shows all), rake notes:fixme, rake notes:optimize and rake notes:todo.

* Added fixtures :all to test_helper.rb to assume that most people just want all their fixtures loaded all the time [DHH]

* Added config/initializers where all ruby files within it are automatically loaded after the Rails configuration is done, so you don't have to litter the environment.rb file with a ton of mixed stuff [DHH]

* For new apps, generate a random secret for the cookie-based session store.  [Jeremy Kemper]

* Stop swallowing errors during rake test [Koz]

* Update Rails Initializer to use ActionController::Base#view_paths [Rick]

* Fix gem deprecation warnings, which also means depending on RubyGems 0.9.0+ [Chad Fowler]

* Plugins may be symlinked in vendor/plugins.  #4245 [brandon, progrium@gmail.com]

* Resource generator depends on the model generator rather than duplicating it.  #7269 [bscofield]

* Add/Update usage documentation for script/destroy, resource generator and scaffold_resource generator.  Closes #7092, #7271, #7267.  [bscofield]

* Update to script.aculo.us 1.7.0.  [Thomas Fuchs]

* Update to Prototype 1.5.0. [Sam Stephenson]

* Generator: use destination path for diff tempfiles.  #7015 [alfeld]

* Fixed that webrick would strip leading newlines and hang connection #4156 [psross]

* Ensure plugins are in the Dependencies.load_once_paths collection by default.  [Rick]
  If you really want your plugins to reload, add this to the very top of init.rb:
  
    Dependencies.load_once_paths.delete(lib_path)

* Allow config.to_prepare to work, make the dispatcher safe to 're require'. [Koz, Nicholas Seckar]
